test/functions/vass/proc-iter/error-iter-with-extern.good
error-iter-with-extern.chpl:2: error: 'iter' is not legal with 'extern'
