test/functions/vass/proc-iter/error-iter-with-extern.chpl
extern proc e1();
extern iter e2();
